Snapshot - first rev of the CSS for "style" - a bit more compact. -jk

--- a/.coLab.conf
+++ b/.coLab.conf
@@ -4,5 +4,6 @@
 # 	The format is comments and assignment statements - compatible with 
 # 	the shell and python both.  (Shell source, python imp.load_source('','file')
 # 	
-coLab_url_head="file://Users/Johnny/dev"        # how to get here via an absolute URL
-coLab_rel_head="/Users/Johnny/dev"              # hot to get here from the local root
+coLab_url_head="http://localhost/coLab"        # how to get here via an absolute URL
+coLab_root="/coLab"              # how to get here from the local root
+coLab_home="/Users/Johnny/dev/coLab"
