WAaaay Tooo Much
I know - but need to get caught up.  Should probably pul all the
Page dirs out.   In the mean time, this includes the most recent
change - links updated as needed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 /Sites/*
 *.pyc
 *.confc
+*.png
 *.bak
 datac
 coLab_local
 /Shared/mostrecent.html
 /.InterarchyMirrorCacheData/*
+/Resources/Fonts
+Page
+Page/*
+Song
+Song/*
