Intial Timeline work
Convert the top line to a time line - this is the first part of that -
the older top text is moved down / consolidated or tossed.

The top line "upTickText" stuff is working - we just need to space them
out properly.

Also: added support for issue #48 - OpenTypeFonts now work and the
fonts themselves are now (at least) out of git.

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,14 @@ logs/*
 bin/Older_stuff
 Old
 Old/*
+Resources/Fonts
+Resources/Fonts/*
 Resources/Fonts.tar
 Resources/Fonts.prev
 Resources/Fonts.prev/*
 Resources/Fonts.old
 Resources/Fonts.old/*
+Resources/BadFonts
+Resources/BadFonts/*
 *.swp
 Imaging-1.1.7/
