Major PHP update
This includes a large portion of the php functionality for issue #58
Still needs some tweaking and the locator hidden vars and html5 video
content still need to be generated.   Javascript is not running - most
likely due to the missing bits.

Also includes the initial state of the php include files.

--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,13 @@ coLab_local
 coLab_local/*
 /Shared/mostrecent.html
 /.InterarchyMirrorCacheData/*
-Page
-Page/*
-Song
-Song/*
 Group
 Group/*
+# In case we allow any Group content in the future:
+Group/**/Page
+Group/**/Page/*
+Group/**/Song
+Group/**/Song/*
 Resources/FontIndex
 Resources/*.png
 logs
