--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//Code/clAudio.py=utf-8
 encoding//Code/clclasses.py=utf-8
 encoding//Code/cltkutils.py=utf-8
+encoding//Code/coLab.py=utf-8
