--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,9 @@
 eclipse.preferences.version=1
 encoding//Code/clAudio.py=utf-8
+encoding//Code/clGeo.py=utf-8
 encoding//Code/clclasses.py=utf-8
 encoding//Code/cltkutils.py=utf-8
 encoding//Code/coLab.py=utf-8
+encoding//Code/cthreadtest.py=utf-8
+encoding//Code/py2php.py=utf-8
+encoding//Code/threadtest.py=utf-8
